修改客户端为GUI，加入识别框以支持其它来源扫雷游戏